Removed unnecessary yaml includes.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,18 +10,6 @@ endif(NEON_FOUND)
 set(CMAKE_CXX_FLAGS "-std=c++0x ${CMAKE_CXX_FLAGS} -Wno-format-security ${NEON_FLAGS}")
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${NEON_FLAGS}")
 
-find_package(PkgConfig)
-
-find_package(yaml_cpp_catkin QUIET)
-if(${yaml_cpp_catkin_FOUND})
-  message(STATUS "Found yaml_cpp_catkin, using instead of system library.")
-  set(YamlCpp_LIBRARIES ${yaml_cpp_catkin_LIBRARIES})
-  set(YamlCpp_INCLUDE_DIRS ${yaml_cpp_catkin_INCLUDE_DIRS})
-else()
-  message(STATUS "No yaml_cpp_catkin, using yaml-cpp system library instead.")
-  pkg_check_modules(YamlCpp REQUIRED yaml-cpp>=0.5)
-endif()
-
 ## Find catkin macros and libraries
 ## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
 ## is used, also find other catkin packages
@@ -140,7 +128,7 @@ catkin_package(
   LIBRARIES uvc_ros_driver
   CATKIN_DEPENDS roscpp roslib image_transport
 #  DEPENDS system_lib
-  DEPENDS YamlCpp
+  DEPENDS yaml-cpp
 )
 
 ###########
@@ -153,7 +141,6 @@ catkin_package(
 include_directories(
   ${catkin_INCLUDE_DIRS}
   ${Eigen3_INCLUDE_DIRS}
-  ${YamlCpp_INCLUDE_DIRS}
   include
   /usr/include/libusb-1.0
   src/nodes/c_library
@@ -192,7 +179,6 @@ add_dependencies(uvc_ros_driver_node ${PROJECT_NAME}_gencfg)
 target_link_libraries(uvc_ros_driver_node
   uvc_ros_driver
   ${catkin_LIBRARIES}
-  ${YamlCpp_LIBRARIES}
 )
 
 #############
