Fixed wrong flipping of cameras.

--- a/launch/rqt_config/param_config_schindler_fixed_gain.yaml
+++ b/launch/rqt_config/param_config_schindler_fixed_gain.yaml
@@ -17,32 +17,32 @@ dictitems:
   CAMERA_6_VFLIP: true
   CAMERA_7_HFLIP: false
   CAMERA_7_VFLIP: false
-  CAMERA_8_HFLIP: true
-  CAMERA_8_VFLIP: true
-  CAMERA_9_HFLIP: false
-  CAMERA_9_VFLIP: false
+  CAMERA_8_HFLIP: false
+  CAMERA_8_VFLIP: false
+  CAMERA_9_HFLIP: true
+  CAMERA_9_VFLIP: true
   CAMERA_AUTOEXP: true
-  CAMERA_AUTOG: true
+  CAMERA_AUTOG: false
   CAMERA_EXP_CAM0: 340
   CAMERA_EXP_CAM1: 327
   CAMERA_EXP_CAM2: 340
   CAMERA_EXP_CAM3: 338
-  CAMERA_EXP_CAM4: 340
+  CAMERA_EXP_CAM4: 350
   CAMERA_EXP_CAM5: 340
   CAMERA_EXP_CAM6: 340
   CAMERA_EXP_CAM7: 340
   CAMERA_EXP_CAM8: 340
   CAMERA_EXP_CAM9: 334
-  CAMERA_G_CAM0: 64
-  CAMERA_G_CAM1: 64
-  CAMERA_G_CAM2: 64
-  CAMERA_G_CAM3: 64
-  CAMERA_G_CAM4: 64
-  CAMERA_G_CAM5: 64
-  CAMERA_G_CAM6: 64
-  CAMERA_G_CAM7: 64
-  CAMERA_G_CAM8: 64
-  CAMERA_G_CAM9: 64
+  CAMERA_G_CAM0: 30
+  CAMERA_G_CAM1: 30
+  CAMERA_G_CAM2: 30
+  CAMERA_G_CAM3: 30
+  CAMERA_G_CAM4: 30
+  CAMERA_G_CAM5: 30
+  CAMERA_G_CAM6: 30
+  CAMERA_G_CAM7: 30
+  CAMERA_G_CAM8: 30
+  CAMERA_G_CAM9: 30
   CAMERA_MAX_E: 480
   CAMERA_MIN_E: 0
   CAMERA_TILE: true
@@ -83,7 +83,7 @@ dictitems:
   STEREO_RE_CAM5: false
   STEREO_RE_CAM7: false
   STEREO_RE_CAM9: false
-  STEREO_TH_CAM1: 140
+  STEREO_TH_CAM1: 30
   STEREO_TH_CAM3: 140
   STEREO_TH_CAM5: 140
   STEREO_TH_CAM7: 140
@@ -107,32 +107,32 @@ dictitems:
       CAMERA_6_VFLIP: true
       CAMERA_7_HFLIP: false
       CAMERA_7_VFLIP: false
-      CAMERA_8_HFLIP: true
-      CAMERA_8_VFLIP: true
-      CAMERA_9_HFLIP: false
-      CAMERA_9_VFLIP: false
+      CAMERA_8_HFLIP: false
+      CAMERA_8_VFLIP: false
+      CAMERA_9_HFLIP: true
+      CAMERA_9_VFLIP: true
       CAMERA_AUTOEXP: true
-      CAMERA_AUTOG: true
+      CAMERA_AUTOG: false
       CAMERA_EXP_CAM0: 340
       CAMERA_EXP_CAM1: 327
       CAMERA_EXP_CAM2: 340
       CAMERA_EXP_CAM3: 338
-      CAMERA_EXP_CAM4: 340
+      CAMERA_EXP_CAM4: 350
       CAMERA_EXP_CAM5: 340
       CAMERA_EXP_CAM6: 340
       CAMERA_EXP_CAM7: 340
       CAMERA_EXP_CAM8: 340
       CAMERA_EXP_CAM9: 334
-      CAMERA_G_CAM0: 64
-      CAMERA_G_CAM1: 64
-      CAMERA_G_CAM2: 64
-      CAMERA_G_CAM3: 64
-      CAMERA_G_CAM4: 64
-      CAMERA_G_CAM5: 64
-      CAMERA_G_CAM6: 64
-      CAMERA_G_CAM7: 64
-      CAMERA_G_CAM8: 64
-      CAMERA_G_CAM9: 64
+      CAMERA_G_CAM0: 30
+      CAMERA_G_CAM1: 30
+      CAMERA_G_CAM2: 30
+      CAMERA_G_CAM3: 30
+      CAMERA_G_CAM4: 30
+      CAMERA_G_CAM5: 30
+      CAMERA_G_CAM6: 30
+      CAMERA_G_CAM7: 30
+      CAMERA_G_CAM8: 30
+      CAMERA_G_CAM9: 30
       CAMERA_MAX_E: 480
       CAMERA_MIN_E: 0
       CAMERA_TILE: true
@@ -173,7 +173,7 @@ dictitems:
       STEREO_RE_CAM5: false
       STEREO_RE_CAM7: false
       STEREO_RE_CAM9: false
-      STEREO_TH_CAM1: 140
+      STEREO_TH_CAM1: 30
       STEREO_TH_CAM3: 140
       STEREO_TH_CAM5: 140
       STEREO_TH_CAM7: 140
